--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th{:class => ('hilite' if @hilite == 'title')}= link_to "Movie Title", movies_path(:sort_by => 'title'), id: "title_header" 
+      %th{class:('hilite' if @sort == 'title')}= link_to "Movie Title", movies_path(sort: 'title'), id: "title_header" 
       %th Rating
-      %th{:class => ('hilite' if @hilite == 'release_date')}= link_to "Release Date", movies_path(:sort_by => 'release_date'), id: "release_date_header"
+      %th{class:('hilite' if @sort == 'release_date')}= link_to "Release Date", movies_path(sort: 'release_date'), id: "release_date_header"
       %th More Info
   %tbody
     - @movies.each do |movie|
