--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,18 +1,22 @@
 -#  This file is app/views/movies/index.html.haml
 %h2 All Movies
 
-= form_tag movies_path, :method => :get , id: "ratings_form" do
+-# Part 2 - modify provided code to generate checkboxes form with assigned ID for the form tag, the submit button and the checkboxes
+= form_tag movies_path, :method => :get , id: "ratings_form" do 
   Include:
   - @all_ratings.each do |rating|
     = rating
+    -# checkboxes used to filter the output remains checked after the result is rendered
     = check_box_tag "ratings[#{rating}]", "1", @checked_ratings.include?(rating), id: "ratings_#{rating}"
   = submit_tag 'Refresh', :class => 'btn btn-primary', id: "ratings_submit"
 
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th{class:('hilite' if @sort == 'title')}= link_to "Movie Title", movies_path(sort: 'title'), id: "title_header" 
+      -# Part 1 - link created with assigned ID, movie entris will be sorted by title
+      %th{class:('hilite' if @sort == 'title')}= link_to "Movie Title", movies_path(sort: 'title'), id: "title_header"
       %th Rating
+      -# Part 1 - link created with assigned ID, movie entries will be sorted by release date
       %th{class:('hilite' if @sort == 'release_date')}= link_to "Release Date", movies_path(sort: 'release_date'), id: "release_date_header"
       %th More Info
   %tbody
